cmake_minimum_required(VERSION 2.8.12)
project(opennn)

add_subdirectory(pybind11)
pybind11_add_module(opennn 
opennn/pybind.cpp 
opennn/opennn/variables.cpp 
opennn/opennn/instances.cpp 
opennn/opennn/missing_values.cpp 
opennn/opennn/data_set.cpp 
opennn/opennn/inputs.cpp 
opennn/opennn/outputs.cpp 
opennn/opennn/unscaling_layer.cpp 
opennn/opennn/scaling_layer.cpp 
opennn/opennn/inputs_trending_layer.cpp 
opennn/opennn/outputs_trending_layer.cpp 
opennn/opennn/probabilistic_layer.cpp 
opennn/opennn/perceptron_layer.cpp 
opennn/opennn/perceptron.cpp 
opennn/opennn/neural_network.cpp 
opennn/opennn/multilayer_perceptron.cpp  
opennn/opennn/bounding_layer.cpp 
opennn/opennn/sum_squared_error.cpp 
opennn/opennn/root_mean_squared_error.cpp 
opennn/opennn/loss_index.cpp 
opennn/opennn/normalized_squared_error.cpp 
opennn/opennn/minkowski_error.cpp 
opennn/opennn/mean_squared_error.cpp 
opennn/opennn/weighted_squared_error.cpp 
opennn/opennn/cross_entropy_error.cpp 
opennn/opennn/training_strategy.cpp 
opennn/opennn/training_algorithm.cpp 
opennn/opennn/training_rate_algorithm.cpp 
opennn/opennn/random_search.cpp 
opennn/opennn/quasi_newton_method.cpp 
opennn/opennn/levenberg_marquardt_algorithm.cpp 
opennn/opennn/gradient_descent.cpp 
opennn/opennn/evolutionary_algorithm.cpp 
opennn/opennn/conjugate_gradient.cpp 
opennn/opennn/model_selection.cpp 
opennn/opennn/order_selection_algorithm.cpp 
opennn/opennn/incremental_order.cpp 
opennn/opennn/golden_section_order.cpp 
opennn/opennn/simulated_annealing_order.cpp 
opennn/opennn/ant_colony_optimization.cpp 
opennn/opennn/inputs_selection_algorithm.cpp 
opennn/opennn/growing_inputs.cpp 
opennn/opennn/pruning_inputs.cpp 
opennn/opennn/genetic_algorithm.cpp 
opennn/opennn/testing_analysis.cpp  
opennn/opennn/numerical_integration.cpp 
opennn/opennn/numerical_differentiation.cpp 
opennn/opennn/principal_components_layer.cpp 
opennn/opennn/threshold_selection_algorithm.cpp 
opennn/opennn/f1_score_optimization_threshold.cpp 
opennn/opennn/matthew_correlation_optimization_threshold.cpp 
opennn/opennn/youden_index_optimization_threshold.cpp 
opennn/opennn/kappa_coefficient_optimization_threshold.cpp 
opennn/opennn/roc_curve_optimization_threshold.cpp 
opennn/opennn/selective_pruning.cpp 
opennn/opennn/file_utilities.cpp 
opennn/opennn/association_rules.cpp 
opennn/opennn/text_analytics.cpp 
opennn/opennn/tinyxml2.cpp 
opennn/opennn/correlation_analysis.cpp)
